Enhanced firmware management: Removed FL prefix from filenames, added expandable info section with features

--- a/data/index.html
+++ b/data/index.html
@@ -88,6 +88,12 @@
                         </tbody>
                     </table>
                 </div>
+                
+                <!-- Expandable Firmware Details -->
+                <div id="firmwareDetails" class="firmware-details" style="display: none;">
+                    <h5>Firmware Details</h5>
+                    <div id="firmwareFeatures" class="firmware-features"></div>
+                </div>
             </div>
             
             <!-- Firmware Upload -->
