--- a/data/index.html
+++ b/data/index.html
@@ -6,6 +6,7 @@
     <title>ESP32 C3 Controller & Log Viewer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
 </head>
 <body>
     <div class="container">
