--- a/data/index.html
+++ b/data/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESP32 C3 Controller & Log Viewer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -72,7 +74,7 @@
                 
                 <!-- Firmware Table -->
                 <div class="firmware-table-container">
-                    <table id="firmwareTable" class="firmware-table">
+                    <table id="firmwareTable" class="firmware-table display">
                         <thead>
                             <tr>
                                 <th>Filename</th>
