Enhanced log system with auto-refresh and auto-scroll: enabled by default, smart scroll detection, visual indicators, toggle controls, and authentic tail -f experience

--- a/data/index.html
+++ b/data/index.html
@@ -140,6 +140,7 @@
                 <button onclick="clearLog()" class="control-btn">Clear Log</button>
                 <button onclick="scanI2C()" class="control-btn">Scan I2C</button>
                 <button onclick="autoRefresh()" class="control-btn">Auto-refresh: <span id="autoRefreshStatus">OFF</span></button>
+                <button onclick="toggleAutoScroll()" class="control-btn">Auto-scroll: <span id="autoScrollStatus">ON</span></button>
             </div>
             <div id="logEntries" class="log-entries">Loading log...</div>
         </div>
