Added NTP time synchronization: TimeManager library with NTPClient, automatic time sync after WiFi connection, formatted timestamps in logs, real-time clock display in web interface, and time endpoint API

--- a/data/index.html
+++ b/data/index.html
@@ -13,9 +13,12 @@
 <body>
     <div class="container">
         <h1>ESP32 C3 Controller & Log Viewer</h1>
-        <div class="status connected">
-            <strong>Status:</strong> Connected to WiFi
-        </div>
+                    <div class="status connected">
+                        <strong>Status:</strong> Connected to WiFi
+                    </div>
+                    <div class="time-display">
+                        <strong>Current Time:</strong> <span id="currentTime">Loading...</span>
+                    </div>
         
         <!-- Configuration Section -->
         <div class="config-section">
