Added retry mechanism and manual refresh button for firmware table: multiple refresh attempts with delays to handle file system timing issues, plus manual refresh button for troubleshooting

--- a/data/index.html
+++ b/data/index.html
@@ -74,6 +74,11 @@
                 
                 <!-- Firmware Table -->
                 <div class="firmware-table-container">
+                    <div class="firmware-table-header">
+                        <button onclick="refreshFirmwareTable()" class="control-btn" style="margin-bottom: 10px;">
+                            <i class="fas fa-sync-alt"></i> Refresh Firmware List
+                        </button>
+                    </div>
                     <table id="firmwareTable" class="firmware-table display">
                         <thead>
                             <tr>
