Fixed System Log modal terminal appearance: restored proper terminal styling with dark background, green text, monospace font, and custom scrollbars to match the main page log display

--- a/data/index.html
+++ b/data/index.html
@@ -179,7 +179,7 @@
                         <button onclick="autoRefreshForModal()" class="control-btn">Auto-refresh: <span id="modalAutoRefreshStatus">OFF</span></button>
                         <button onclick="toggleAutoScrollForModal()" class="control-btn">Auto-scroll: <span id="modalAutoScrollStatus">ON</span></button>
                     </div>
-                    <div id="modalLogEntries" class="log-entries">Loading log...</div>
+                    <div id="modalLogEntries" class="log-entries terminal-style">Loading log...</div>
                 </div>
             </div>
         </div>
