Add comprehensive I2C debugging tools for OLED troubleshooting
- Update I2CScanner with configurable pins and better debugging
- Change default pins to ESP32-C3-DevKitC-02 standard (GPIO 8/10)
- Add detailed I2C scanning with common address testing
- Create dedicated I2C testing web page with pin configuration
- Add web endpoints for pin updates, reinitialization, and detailed scans
- Include troubleshooting tips and common I2C address reference
- Link I2C testing page from main interface
- This should help debug the 'no devices detected' OLED issue

--- a/data/index.html
+++ b/data/index.html
@@ -29,6 +29,9 @@
                 <button onclick="showSystemLogModal()" class="config-btn system-log">
                     <i class="fas fa-terminal"></i> System Log
                 </button>
+                <a href="/i2c_test.html" class="config-btn i2c-test">
+                    <i class="fas fa-microchip"></i> I2C Testing
+                </a>
             </div>
         </div>
         
